--- a/scss/_main-container.scss
+++ b/scss/_main-container.scss
@@ -2364,6 +2364,7 @@ footer{
 				top:-5px;
 				@include r($tablet) {
 					top: -20px;
+					left: 20px;
 				}
 			}
 		}
